internal/xds/translator/testdata/out/xds-ir/local-ratelimit-retry-after-header.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route-ratelimit-single-rule
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.local_ratelimit:
          '@type': type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
          alwaysConsumeDefaultTokenBucket: false
          descriptors:
          - entries:
            - key: rule-0-match-0
              value: rule-0-match-0
            tokenBucket:
              fillInterval: 3600s
              maxTokens: 10
              tokensPerFill: 10
          enableRetryAfterHeader: true
          enableXRatelimitHeaders: DRAFT_VERSION_03
          filterEnabled:
            defaultValue:
              numerator: 100
          filterEnforced:
            defaultValue:
              numerator: 100
          rateLimits:
          - actions:
            - headerValueMatch:
                descriptorKey: rule-0-match-0
                descriptorValue: rule-0-match-0
                expectMatch: true
                headers:
                - name: x-user-id
                  stringMatch:
                    exact: one
          statPrefix: http_local_rate_limiter
          tokenBucket:
            fillInterval: 60s
            maxTokens: 10
            tokensPerFill: 10
